Closed
Bug 659448
Opened 14 years ago
Closed 14 years ago
TI: Multiple [infer failure] Missing type in object #2:prototype errors
Categories
(Core :: JavaScript Engine, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: decoder, Unassigned)
References
Details
(Keywords: assertion, testcase)
Attachments
(3 files)
The attached testcases produce infer failures on TI revision 29f08848d96c (run with -j -m -n -a), tested on 64 bit. All tests look similar so it's likely that it's a single problem source.
Reporter | ||
Comment 1•14 years ago
|
||
Reporter | ||
Comment 2•14 years ago
|
||
Comment 4•14 years ago
|
||
stubs::SetName had a path where it would assign to an object without going through a type barrier. Missed this while grepping because it was doing setSlot instead of nativeSetSlot (like the interpreter does). This fixes all three testcases.
http://hg.mozilla.org/projects/jaegermonkey/rev/fb3171c03055
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Reporter | ||
Comment 5•13 years ago
|
||
A testcase for this bug was automatically identified at js/src/jit-test/tests/jaeger/bug659448.js.
Flags: in-testsuite+
You need to log in
before you can comment on or make changes to this bug.
Description
•