[INFER] Add missing type barrier in stubs::SetName, bug 659448.